--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+
+.wp-open-sans {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
 .nav-content{
     display: flex;
     justify-content: space-between;
