--- a/style/style.css
+++ b/style/style.css
@@ -143,3 +143,36 @@ margin-bottom: 20px;
  .header-button .btn2:hover{
     background-color: #30b868;
  }
+
+ #content-container{
+    display: flex;
+    
+    max-width: 1360px;
+    margin: 0 auto;
+    margin-top: 120px;
+    margin-bottom: 120px;
+    
+ }
+
+ #content-container .content-section{
+    margin-left: 80px;
+    
+ }
+ .content-section .connect-pra1{
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #30B868;
+    margin-bottom: 5px;
+ }
+ .content-section h2{
+    font-size: 40px;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+ }
+ .content-section .content-pra2{
+    font-size: 16px;
+    color: #757575;
+    margin-bottom: 20px;
+ }
+
+ 
