--- a/style/style.css
+++ b/style/style.css
@@ -95,7 +95,7 @@ margin-bottom: 20px;
     font-size: 60px;
     text-transform: capitalize;
     color: #ffffff;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
  .banner-content h2 .banner-heading{
     color: #30B868;
@@ -104,7 +104,7 @@ margin-bottom: 20px;
     font-size: 16px;
     color: #ffffff;
     line-height: 34px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
  }
 
  .header-button .btn1{
@@ -144,17 +144,68 @@ margin-bottom: 20px;
     background-color: #30b868;
  }
 
+#card-container{
+    /* max-width: 1360px; */
+    margin: 0 auto;
+    /* background-color: #fbfbfb; */
+    
+}
+#card-container .card-con-content{
+    margin-top: 40px;
+    text-align: center;
+}
+.card-con-content h2{
+    font-size: 40px;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+}
+.card-con-content p{
+    font-size: 16px;
+    color: #757575;
+}
+
+#card-container .card-section{
+    display: flex;
+    gap: 20px;
+    max-width: 1360px;
+    margin: 0 auto
+    /* justify-content: center; */
+}
+.card-section .car-content{
+     max-width: 320px; 
+    margin-top: 40px;
+    padding: 80px 20px 20px;
+    text-align: center;
+    box-shadow: 0 5px 15px 0 rgb(0,0,0,.25);
+    
+}
+
+.card-section .car-content img{
+   margin: 0 auto;
+    background-color: red;
+    padding: 10px;
+    border-radius: 50%;
+    /* width: 50%; */
+    /* height: 50%; */
+}
+.card-section .car-content h4{
+    font-size: 24px;
+    color: #001931;
+    margin-bottom: 8px;
+}
+
  #content-container{
     display: flex;
-    
-    max-width: 1360px;
     margin: 0 auto;
+    max-width: 1360px;
+   
     margin-top: 120px;
     margin-bottom: 120px;
     
  }
 
  #content-container .content-section{
+   margin-top: 100px;
     margin-left: 80px;
     
  }
@@ -171,8 +222,23 @@ margin-bottom: 20px;
  }
  .content-section .content-pra2{
     font-size: 16px;
+    line-height: 26px;
     color: #757575;
     margin-bottom: 20px;
  }
 
- 
+ .content-section ul li{
+    list-style: none;
+    margin-bottom: 10px;
+   
+ }
+
+ .content-section ul li a{
+    font-size: 16px;
+    color: #001931;
+    text-decoration: none;
+ }
+ .content-section ul li a img{
+vertical-align: -4px;
+margin-right: 5px;
+ }
