--- a/style/style.css
+++ b/style/style.css
@@ -261,6 +261,7 @@ margin-right: 5px;
     font-weight: 700;
     text-transform: capitalize;
     color: black;
+    
     margin-bottom: 10px;
  }
  .early-section p{
@@ -283,5 +284,40 @@ margin-right: 5px;
     color: #ffffff;
  }
  #footer-continer{
-    display: flex;
+    
+    background-color: #001931;
+    
  }
+  #footer-continer .footer-content{
+    display: flex;
+    justify-content: space-between;
+    padding: 120px;
+  }
+   
+   
+  .footer-content .social-link h2{
+    font-size: 20px;
+    color: #ffffff;
+    
+  }
+   .footer-content .social-link ul {
+    display: flex;
+    margin-top: 15px;
+    
+    gap: 25px;
+   }
+    .footer-content .social-link ul li{
+        list-style: none;
+       
+    }
+    .social-link ul li a i{
+        color: #ffffff;
+    }
+    #footer-continer p{
+       border-top: 1px solid #FAFAFA ;
+       padding-top: 40px;
+        font-size: 16px;
+        color: #ffffff;
+        text-align: center;
+        padding-bottom: 40px;
+    }
