--- a/style/style.css
+++ b/style/style.css
@@ -14,18 +14,22 @@
 /*Shared style*/
 .btn{
     margin: 20px 150px auto;
-    padding: 20px 40px;
+    padding: 15px 20px;
     background-color: #30b868;
+    border: none;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 18px;
     color: #ffffff;
     cursor: pointer;
     font-weight: 600;
 
 }
+.btn img{
+    vertical-align: -5px;
+}
 .btn:hover{
-    background-color: transparent;
-    color: black;
+    background-color: tomato;
+    color: #fffff;
 }
 
 .nav-content{
@@ -90,6 +94,7 @@ color: #469165;
 padding: 10px;
 margin-bottom: 20px;
 
+
 }
 .banner-content h2{
     font-size: 60px;
@@ -112,7 +117,7 @@ margin-bottom: 20px;
     padding: 15px 20px;
     background-color: #30b868;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 18px;
     text-transform: capitalize;
     color: #ffffff;
     cursor: pointer;
@@ -133,7 +138,7 @@ margin-bottom: 20px;
     padding: 15px 20px;
     background-color: transparent;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 18px;
     text-transform: capitalize;
     color: #ffffff;
     cursor: pointer;
